--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "serve": "nodemon ./bin/www"
+    "serve": "nodemon ./bin/www",
+    "build": "yarn tsc --build tsconfig.json"
   },
   "dependencies": {
     "@babel/core": "^7.19.6",
